force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>L&apos;objet Log__c permet de suivre et d&apos;enregistrer les mises à jour des points d&apos;énergie, ainsi que d&apos;identifier la personne ayant effectué la mise à jour.</description>
    <label>Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>