force-app/main/default/objects/Log__c/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <label>Apex Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>