force-app/main/default/objects/Log__c/fields/CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CurrentUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ce champs contient l&apos;id de l&apos;user courant</description>
    <label>CurrentUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>