force-app/main/default/objects/Log__c/fields/Date_ACD__c.field-meta.xml
<CustomField>
    <fullName>Date_ACD__c</fullName>
    <label>Date ACD</label>
    <type>Date</type>
</CustomField>