force-app/main/default/objects/Log__c/fields/Erreur__c.field-meta.xml
<CustomField>
    <fullName>Erreur__c</fullName>
    <label>Erreur</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>