force-app/main/default/objects/Log__c/fields/NumeroCompteur__c.field-meta.xml
<CustomField>
    <fullName>NumeroCompteur__c</fullName>
    <label>NumeroCompteur</label>
    <length>25</length>
    <type>Text</type>
</CustomField>