force-app/main/default/objects/Log__c/fields/PDE__c.field-meta.xml
<CustomField>
    <fullName>PDE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point d&apos;énergie</label>
    <referenceTo>PDE__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>