force-app/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGE</fullName>
            </value>
            <value>
                <fullName>HOMEYS_TURPE</fullName>
                <label>HOMEYS TURPE</label>
            </value>
            <value>
                <fullName>GAZEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>