force-app/main/default/objects/Log__c/fields/Verb__c.field-meta.xml
<CustomField>
    <fullName>Verb__c</fullName>
    <label>Verb</label>
    <length>6</length>
    <type>Text</type>
</CustomField>