force-app/main/default/objects/Log__c/listViews/Gazel_Logs.listView-meta.xml
<ListView>
    <fullName>Gazel_Logs</fullName>
    <columns>NAME</columns>
    <columns>RecordId__c</columns>
    <columns>Endpoint__c</columns>
    <columns>RequestBody__c</columns>
    <columns>ResponseBody__c</columns>
    <columns>StatusCode__c</columns>
    <columns>CurrentUser__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>GAZEL</value>
    </filters>
    <label>Gazel Logs</label>
</ListView>