force-app/main/default/objects/Log__c/listViews/SGE_Logs.listView-meta.xml
<ListView>
    <fullName>SGE_Logs</fullName>
    <columns>NAME</columns>
    <columns>ApexMethod__c</columns>
    <columns>Verb__c</columns>
    <columns>Endpoint__c</columns>
    <columns>RequestBody__c</columns>
    <columns>ResponseBody__c</columns>
    <columns>StatusCode__c</columns>
    <columns>CurrentUser__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>SGE</value>
    </filters>
    <filters>
        <field>Endpoint__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>SGE Logs</label>
</ListView>